--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -7,10 +9,6 @@
 a {
   text-decoration: none;
   color: inherit;
-}
-
-button {
-  cursor: pointer;
 }
 
 :root {
@@ -23,14 +21,20 @@ button {
   --green-light: #d1fae5;
   --red-light: #ffe2e3;
   --navy-blue: #4f46e5;
-  --grey-light: #f9fafb;
+  --grey-light: #757575;
   --grey-border: #e5e7eb;
   --edit-title: #6b7280;
-  --black-dark: black;
+  --black-dark: #000000;
 }
 
+html,
 body {
+  font-family: 'Roboto', sans-serif;
   background-color: var(--background);
+}
+
+#app {
+  font-family: 'Roboto', sans-serif;
 }
 
 button {
@@ -41,8 +45,15 @@ button {
   background-color: var(--navy-blue);
   padding: 4px;
   border: 0;
-  border-radius: 4px;
   color: var(--white);
   align-items: center;
   justify-content: center;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+input {
+  border: 0;
 }
